# CloudSec

./: .gitignore  LICENSE  README.md  SECURITY.md
01-Offensive-Operations/: README.md
02-Vulnerability-Research/: README.md
03-Threat-Intelligence/: Compromised_IPs_2.txt
AWS/: AWSEC-Readme.md
Athena Hunting/: Detect AWS console signin token abuse.ath  Launch Daemon Execution Via Launchctl.ath
Attacking the Cloud/: Entra ID-Microsoft 365 Attacks.md  copilot.html
Azure/: Readme.md
BG Hunting-Detections/: Readme.md
CFIR (Cloud IR)/: EntraID_M365_Azure_Logs.md  readme.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/: CONTRIBUTING.md  install.sh  pyproject.toml
Cloud-OffSec/MicrosoftCloud/EntraReaper/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/claude/agents/: entrareaper-agent.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/docs/: architecture_v2.1.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/engagement/credentials/certs/: README.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/engagement/operations/noise/: README.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/engagement/operations/persistence/: README.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/reference/app-ids/: EntraID-EA.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/reference/cmdlets/: cmdlet_reference.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/reference/scenarios/: scenarios_full.md
Cloud-OffSec/MicrosoftCloud/EntraReaper/src/entrareaper/: engagement_store.py
Cloud-OffSec/MicrosoftCloud/EntraReaper/src/entrareaper/modules/: __init__.py  analyzer.py
(+339 files in other folders)
